fix: z-index on favourite activities removed

--- a/frontend/src/components/FavouriteActivities/styles.scss
+++ b/frontend/src/components/FavouriteActivities/styles.scss
@@ -14,7 +14,6 @@
 
 .#{vars.$bcgov-prefix}--row>.favourite-activities-title {
   padding-left: 0.5rem;
-  z-index: 8001; // 1 z-index higher than the side-nav
 }
 
 .favourite-activities-subtitle {
